--- a/pom.xml
+++ b/pom.xml
@@ -132,11 +132,8 @@
       <artifactId>jsqlparser</artifactId>
       <version>${jsqlparser.version}</version>
     </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
+
+
 
     <dependency>
       <groupId>commons-logging</groupId>
@@ -179,6 +176,35 @@
       <artifactId>persistence-api</artifactId>
       <version>${jpa.version}</version>
     </dependency>
+
+    <!--<dependency>-->
+      <!--<groupId>org.aspectj</groupId>-->
+      <!--<artifactId>aspectjrt</artifactId>-->
+      <!--<version>1.9.2</version>-->
+    <!--</dependency>-->
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>${spring.version}</version>
+     </dependency>
+    <dependency>
+      <groupId>aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>1.5.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>${log4j.version}</version>
+    </dependency>
+
+    <!--<dependency>-->
+      <!--<groupId>aspectj</groupId>-->
+      <!--<artifactId>aspectjweaver</artifactId>-->
+      <!--<version>1.5.3</version>-->
+    <!--</dependency>-->
   </dependencies>
 
   <build>
